# capstone_project

./: CMakeLists.txt  READ.ME  service_txt.txt
lib/: CMakeLists.txt  MsgQue_lib.cpp  MsgQue_lib.hpp
logger/: config_lib.cpp  config_lib.hpp  simpleLogger.cpp  simpleLogger.hpp
logger/config/: LoggerConfig.txt
math/: math_app.cpp  math_app.hpp
socket/: machine.cpp  rpi.cpp  rpi.hpp
